--- a/src/js/containers/app/app.css
+++ b/src/js/containers/app/app.css
@@ -1,3 +1,18 @@
 .app-wrapper{
     min-height: 100%;
+    padding: 10px;
+    box-sizing: border-box;
+}
+
+.overflow{
+    &:before{
+        content:'';
+        position: fixed;
+        width: 100%;
+        height: 100%;
+        left: 0;
+        top: 0;
+        background-color: var(--overflow-opacity);
+        z-index: var(--low-index);
+    }
 }
