--- a/src/js/main.css
+++ b/src/js/main.css
@@ -1,3 +1,28 @@
+@font-face {
+    font-family: 'Roboto';
+    src: url('../assets/fonts/roboto/Roboto-Thin.ttf') format('truetype'),
+    url('../assets/fonts/roboto/Roboto-Light.ttf') format('truetype'),
+    url('../assets/fonts/roboto/Roboto-Regular.ttf') format('truetype');
+    font-weight: 300;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Roboto-Bold';
+    src: url('../assets/fonts/roboto/Roboto-Bold.ttf') format('truetype');
+    font-weight: 600;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'icons';
+    src: url('../assets/fonts/boilerplate/fonts/boilerplate.ttf') format('truetype'),
+    url('../assets/fonts/boilerplate/fonts/boilerplate.woff'),
+    url('../assets/fonts/boilerplate/fonts/boilerplate.svg') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
 /** HEADER **/
 
 h1, h2, h3{
@@ -22,8 +47,8 @@ textarea {
     height: 35px;
     border-radius: 5px;
     -webkit-appearance: none;
-    background-color: var(--third-clr);
-    border: 1px solid var(--btn-def);
+    background-color: var(--pr-clr);
+    border: 1px solid var(--scnd-clr);
     padding: 5px 15px;
     outline: 0;
     color: var(--font-pr-clr);
@@ -31,7 +56,7 @@ textarea {
     font-weight: normal;
     box-sizing: border-box;
 &:focus{
-     border:1px solid var(--btn-scs);
+     border:1px solid var(--scnd-clr);
  }
 &:disabled{
      background-color: var(--pr-clr);
@@ -50,19 +75,44 @@ input[type='date']:before{
 }
 
 ::-webkit-input-placeholder {
-    color: var(--font-scnd-clr);
+    color: var(--font-thrd-clr);
 }
 
 ::-moz-placeholder {
-    color: var(--font-scnd-clr);
+    color: var(--font-thrd-clr);
 }
 
 :-moz-placeholder {
-    color: var(--font-scnd-clr);
+    color: var(--font-thrd-clr);
 }
 
 :-ms-input-placeholder {
+    color: var(--font-thrd-clr);
+}
+
+:global(.btn-scs) {
+    background-color: var(--btn-info);
+    border: none;
     color: var(--font-scnd-clr);
+    padding: 10px 20px;
+    box-sizing: border-box;
+    border-radius: 5px;
+    margin-left: 0.5rem;
+    cursor: pointer;
+
+    &:hover {
+     background-color: var(--btn-scs);
+    }
+}
+
+:global(.logo) {
+    display: block;
+    width: 75px;
+    height: 75px;
+    background-image: url('../assets/images/spotim-logo.jpg');
+    background-size: contain;
+    background-repeat: no-repeat;
+    margin: 0 auto;
 }
 
 html, body {
