Chat styling elements position change

--- a/src/js/components/messenger/message/message.css
+++ b/src/js/components/messenger/message/message.css
@@ -10,6 +10,7 @@
     }
 
     .user-message{
+        max-width: 250px;
         padding: 10px;
         box-sizing: border-box;
         border-radius: 5px;
@@ -21,6 +22,7 @@
     }
 
     .guest-message{
+        max-width: 250px;
         padding: 10px;
         box-sizing: border-box;
         border-radius: 5px;
@@ -31,12 +33,48 @@
         vertical-align: middle;
     }
 
+    .avatar-wrapper{
+        width: 45px;
+        display: table-cell;
+        vertical-align: bottom;
+    }
+
     .avatar{
         width: 45px;
         height: 45px;
         background-size: contain;
-        display: table-cell;
-        vertical-align: middle;
         background-repeat: no-repeat;
+        display: block;
+    }
+
+    .username{
+        color: var(--font-thrd-clr);
+        font-size: var(--font-12px);
+        display: block;
+        width: 100%;
+        box-sizing: border-box;
+        text-align: center;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        padding-right: 5px;
+        max-width: 60px;
+    }
+
+    .date{
+        width: 100%;
+        display: block;
+        box-sizing: border-box;
+        color: var(--font-thrd-clr);
+        font-size: var(--font-10px);
+        font-family: 'Roboto-Regular', san-serif;
+
+        &:global(.align-left){
+             padding: 1rem 0 0 1rem;
+        }
+
+        &:global(.align-right){
+             padding: 1rem 1rem 0 0;
+        }
     }
 }
