--- a/src/js/components/messenger/messenger.css
+++ b/src/js/components/messenger/messenger.css
@@ -1,8 +1,15 @@
-.messages-wrapper{
+.messages{
     width: 100%;
-    height: calc(100% - 60px);
+    height: calc(100% - 65px);
     border: 1px solid var(--scnd-clr);
     border-radius: 5px;
+    overflow: hidden;
+}
+
+.messages-wrapper{
+    width: 100%;
+    height: 100%;
     margin: 0;
-    padding: 0;
+    padding: 0 0 50px 0;
+    overflow-y: auto;
 }
