--- a/src/js/components/textarea/textarea.css
+++ b/src/js/components/textarea/textarea.css
@@ -6,6 +6,7 @@
     height: 50px;
     padding: 10px 5px;
     box-sizing: border-box;
+    background-color: var(--pr-clr);
 
     &.invalid{
         bottom: 20px;
