--- a/src/js/main.css
+++ b/src/js/main.css
@@ -61,6 +61,8 @@ textarea {
     font-size: var(--font-14px);
     font-weight: normal;
     box-sizing: border-box;
+    -webkit-appearance: none;
+    -webkit-border-radius: 0;
 &:focus{
      border:1px solid var(--scnd-clr);
  }
@@ -105,7 +107,8 @@ input[type='date']:before{
     border-radius: 5px;
     margin-left: 0.5rem;
     cursor: pointer;
-
+    -webkit-appearance: none;
+    -webkit-border-radius: 0;
     &:hover {
      background-color: color(var(--third-clr) lightness(65%))
     }
